// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`issue 12 init state is correct 1`] = `
<div>
  <div>
    <span>
      coffee
      !
    </span>
    <span>
      tea
    </span>
  </div>
</div>
`;

exports[`issue 12 init state is correct 2`] = `
<div>
  <div>
    <span>
      coffee
      !
    </span>
    <span>
      tea
    </span>
  </div>
</div>
`;

exports[`issue 12 run transaction 1`] = `
<div>
  <div>
    <span>
      soup
    </span>
  </div>
</div>
`;

exports[`issue 12 run transaction 2`] = `
<div>
  <div>
    <span>
      soup
    </span>
  </div>
</div>
`;

exports[`useImperativeHandle and forwardRef should work with useObserver 1`] = `[MockFunction]`;
